eoullim-Project/src/main/java/org/example/eoullimback/_common/error/exception/Exception403.java
package org.example.eoullimback._common.error.exception;

public class Exception403 extends RuntimeException {
    public Exception403(String msg) {
        super(msg);
    }

}
